--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 
 </head>
 <body>
@@ -156,7 +160,7 @@
 
                     </div>
                 </div>
-                <div class="card4">
+                <div class="card4"  >
                     <div class="card">
                         <h1>Iphone X </h1>
                         <img src="./img/apple-watch.png" alt="img">
@@ -231,7 +235,7 @@
     <h1 class="input-tittle">Каталог товаров</h1>
     <div class="container">
         <div class="input-two">
-            <div class="card1">
+            <div class="card5">
                 <div class="card">
                     <h1>Iphone X </h1>
                     <img src="./img/iphone.png" alt="img">
@@ -254,7 +258,7 @@
 
                 </div>
             </div>
-            <div class="card2">
+            <div class="card5">
                 <div class="card">
                     <h1>DJI Mavic Pro </h1>
                     <img src="./img/drone-product.png" alt="img">
@@ -277,7 +281,7 @@
 
                 </div>
             </div>
-            <div class="card3">
+            <div class="card5">
                 <div class="card">
                     <h1>Apple IPad Pro </h1>
                     <img src="./img/ipad.png" alt="img">
@@ -300,7 +304,99 @@
 
                 </div>
             </div>
-            <div class="card4">
+            <div class="card5">
+                <div class="card">
+                    <h1>Apple Watch Series 5 </h1>
+                    <img src="./img/apple-watch.png" alt="img">
+                    <div class="card-tittle">
+                        <p class="tittle">Корпус: <br>
+                            Влагозащита: <br>
+                            Цвет: <br>
+                            Тип экрана: <br>
+                            Размер экрана: </p>
+                        <p class=" sub-tittle">Металл, Стекло <br>
+                            IP67 <br>
+                            Черный <br>
+                            IPS <br>
+                            4,7</p>
+                    </div>
+                    <div class="card-price">
+                        <h4>22 000 грн.</h4>
+                        <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon></a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card5">
+                <div class="card">
+                    <h1>Iphone X </h1>
+                    <img src="./img/iphone.png" alt="img">
+                    <div class="card-tittle">
+                        <p class="tittle">Корпус: <br>
+                            Влагозащита: <br>
+                            Цвет: <br>
+                            Тип экрана: <br>
+                            Размер экрана: </p>
+                        <p class=" sub-tittle">Металл, Стекло <br>
+                            IP67 <br>
+                            Черный <br>
+                            IPS <br>
+                            4,7</p>
+                    </div>
+                    <div class="card-price">
+                        <h4>22 000 грн.</h4>
+                        <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon></a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card5">
+                <div class="card">
+                    <h1>DJI Mavic Pro </h1>
+                    <img src="./img/drone-product.png" alt="img">
+                    <div class="card-tittle">
+                        <p class="tittle">Корпус: <br>
+                            Влагозащита: <br>
+                            Цвет: <br>
+                            Тип экрана: <br>
+                            Размер экрана: </p>
+                        <p class=" sub-tittle">Металл, Стекло <br>
+                            IP67 <br>
+                            Черный <br>
+                            IPS <br>
+                            4,7</p>
+                    </div>
+                    <div class="card-price">
+                        <h4>22 000 грн.</h4>
+                        <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon></a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card5">
+                <div class="card">
+                    <h1>Apple IPad Pro </h1>
+                    <img src="./img/ipad.png" alt="img">
+                    <div class="card-tittle">
+                        <p class="tittle">Корпус: <br>
+                            Влагозащита: <br>
+                            Цвет: <br>
+                            Тип экрана: <br>
+                            Размер экрана: </p>
+                        <p class=" sub-tittle">Металл, Стекло <br>
+                            IP67 <br>
+                            Черный <br>
+                            IPS <br>
+                            4,7</p>
+                    </div>
+                    <div class="card-price">
+                        <h4>22 000 грн.</h4>
+                        <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon></a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="card5">
                 <div class="card">
                     <h1>Apple Watch Series 5 </h1>
                     <img src="./img/apple-watch.png" alt="img">
@@ -325,100 +421,7 @@
             </div>
 
         </div>
-        <div class="input-three">
-            <div class="card1">
-                <div class="card">
-                    <h1>Iphone X </h1>
-                    <img src="./img/iphone.png" alt="img">
-                    <div class="card-tittle">
-                        <p class="tittle">Корпус: <br>
-                            Влагозащита: <br>
-                            Цвет: <br>
-                            Тип экрана: <br>
-                            Размер экрана: </p>
-                        <p class=" sub-tittle">Металл, Стекло <br>
-                            IP67 <br>
-                            Черный <br>
-                            IPS <br>
-                            4,7</p>
-                    </div>
-                    <div class="card-price">
-                        <h4>22 000 грн.</h4>
-                        <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon></a>
-                    </div>
 
-                </div>
-            </div>
-            <div class="card2">
-                <div class="card">
-                    <h1>DJI Mavic Pro </h1>
-                    <img src="./img/drone-product.png" alt="img">
-                    <div class="card-tittle">
-                        <p class="tittle">Корпус: <br>
-                            Влагозащита: <br>
-                            Цвет: <br>
-                            Тип экрана: <br>
-                            Размер экрана: </p>
-                        <p class=" sub-tittle">Металл, Стекло <br>
-                            IP67 <br>
-                            Черный <br>
-                            IPS <br>
-                            4,7</p>
-                    </div>
-                    <div class="card-price">
-                        <h4>22 000 грн.</h4>
-                        <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon></a>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card3">
-                <div class="card">
-                    <h1>Apple IPad Pro </h1>
-                    <img src="./img/ipad.png" alt="img">
-                    <div class="card-tittle">
-                        <p class="tittle">Корпус: <br>
-                            Влагозащита: <br>
-                            Цвет: <br>
-                            Тип экрана: <br>
-                            Размер экрана: </p>
-                        <p class=" sub-tittle">Металл, Стекло <br>
-                            IP67 <br>
-                            Черный <br>
-                            IPS <br>
-                            4,7</p>
-                    </div>
-                    <div class="card-price">
-                        <h4>22 000 грн.</h4>
-                        <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon></a>
-                    </div>
-
-                </div>
-            </div>
-            <div class="card4">
-                <div class="card">
-                    <h1>Apple Watch Series 5 </h1>
-                    <img src="./img/apple-watch.png" alt="img">
-                    <div class="card-tittle">
-                        <p class="tittle">Корпус: <br>
-                            Влагозащита: <br>
-                            Цвет: <br>
-                            Тип экрана: <br>
-                            Размер экрана: </p>
-                        <p class=" sub-tittle">Металл, Стекло <br>
-                            IP67 <br>
-                            Черный <br>
-                            IPS <br>
-                            4,7</p>
-                    </div>
-                    <div class="card-price">
-                        <h4>22 000 грн.</h4>
-                        <a href="#"><ion-icon name="arrow-forward-outline"></ion-icon></a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
 
 
 
